--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
     with:
-      command: "sleep 10000"
+      command: "make functional"
       juju-channel: "3.1/stable"
       nested-containers: false
       python-version: "3.10"
