--- a/src/tox.ini
+++ b/src/tox.ini
@@ -82,5 +82,5 @@ deps =
 commands = pytest {toxinidir}/tests/functional {posargs:-v}
 deps =
   pytest
-  pytest-asyncio
+  pytest-asyncio<0.23  # avoid breaking changes introduced by v0.23
   -r {toxinidir}/tests/functional/requirements.txt
