--- a/src/tox.ini
+++ b/src/tox.ini
@@ -46,7 +46,7 @@ commands =
     black --check --diff --color .
     isort --check --diff --color .
 deps =
-    black
+    black<24.0.0 # TODO: Remove pin once we make our linter pass on it
     flake8
     pyproject-flake8
     flake8-docstrings
