--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -33,9 +33,13 @@ jobs:
       nested-containers: false
       python-version: "3.10"
       timeout-minutes: 120
-    #   juju-controller: soleng-ci-ctrl
-    #   pytest-env: "UFlURVNUX0NMT1VEX05BTUU9YnVpbGRlci1jbG91ZApQWVRFU1RfQ0xPVURfUkVHSU9OPXByb2RzdGFjazYKUFlURVNUX0NMT1VEX0NSRURFTlRJQUw9YnVpbGRlci1jbG91ZC1jcmVkCg=="
-    # secrets:
-    #   juju-controllers-yaml: ${{ secrets.JUJU_CONTROLLERS_YAML }}
-    #   juju-accounts-yaml: ${{ secrets.JUJU_ACCOUNTS_YAML }}
-    #   openstack-auth-env: ${{ secrets.OPENSTACK_AUTH_ENV }}
+      tox-version: "<4"
+      action-operator: false
+      external-controller: true
+      runs-on: "['self-hosted', 'runner-sysconfig']"
+      juju-controller: soleng-ci-ctrl
+      pytest-env: "UFlURVNUX0NMT1VEX05BTUU9YnVpbGRlci1jbG91ZApQWVRFU1RfQ0xPVURfUkVHSU9OPXByb2RzdGFjazYKUFlURVNUX0NMT1VEX0NSRURFTlRJQUw9YnVpbGRlci1jbG91ZC1jcmVkCg=="
+    secrets:
+      juju-controllers-yaml: ${{ secrets.JUJU_CONTROLLERS_YAML }}
+      juju-accounts-yaml: ${{ secrets.JUJU_ACCOUNTS_YAML }}
+      openstack-auth-env: ${{ secrets.OPENSTACK_AUTH_ENV }}
