--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -37,5 +37,6 @@ jobs:
       command: ${{ matrix.command }}
       juju-channel: ${{ matrix.juju-channel }}
       nested-containers: false
+      provider: "lxd"
       python-version: "3.10"
       timeout-minutes: 120
