--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -36,7 +36,7 @@ jobs:
     with:
       command: ${{ matrix.command }}
       juju-channel: ${{ matrix.juju-channel }}
-      nested-containers: true
+      nested-containers: false
       provider: "lxd"
       python-version: "3.10"
       timeout-minutes: 120
