ci: Add ARM64 support

--- a/src/tox.ini
+++ b/src/tox.ini
@@ -80,7 +80,7 @@ deps =
     pytest-cov
 
 [testenv:func]
-commands = pytest {toxinidir}/tests/functional {posargs:-v}
+commands = pytest {toxinidir}/tests/functional -vvvv
 deps =
   pytest
   pytest-asyncio<0.23  # avoid breaking changes introduced by v0.23
