--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -40,12 +40,12 @@ bases:
       - name: ubuntu
         channel: "22.04"
         architectures:
-          - amd64
+          - arm64
       - name: ubuntu
         channel: "20.04"
         architectures:
-          - amd64
+          - arm64
       - name: ubuntu
         channel: "18.04"
         architectures:
-          - amd64
+          - arm64
