--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -32,3 +32,20 @@ bases:
         channel: "18.04"
         architectures:
           - amd64
+  - build-on:
+    - name: ubuntu
+      channel: "22.04"
+      architectures: ["arm64"]
+    run-on:
+      - name: ubuntu
+        channel: "22.04"
+        architectures:
+          - arm64
+      - name: ubuntu
+        channel: "20.04"
+        architectures:
+          - arm64
+      - name: ubuntu
+        channel: "18.04"
+        architectures:
+          - arm64
