ci: Fix release.yaml
Miss runs-on

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,7 @@ jobs:
     secrets: inherit
   release:
     needs: check
+    runs-on: ${{ matrix.runs-on }}
     strategy:
       fail-fast: false
       matrix:
