--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,9 @@ envlist = lint, unit, func
 
 [testenv]
 basepython = python3
+changedir = ./src
 setenv =
-  PYTHONPATH = {toxinidir}:{toxinidir}/lib/:{toxinidir}/hooks/
+  PYTHONPATH = {toxinidir}:{toxinidir}/src/lib/
 passenv =
   HOME
   PATH
@@ -64,7 +65,7 @@ commands =
 deps = {[testenv:lint]deps}
 
 [testenv:unit]
-commands = pytest {toxinidir}/tests/unit \
+commands = pytest {toxinidir}/src/tests/unit \
   {posargs:-v \
            --cov=reactive \
            --cov=actions \
@@ -74,14 +75,14 @@ commands = pytest {toxinidir}/tests/unit \
            --cov-report=term \
            --cov-report=html:report/html}
 deps =
-    -r {toxinidir}/requirements.txt
-    -r {toxinidir}/tests/unit/requirements.txt
+    -r {toxinidir}/src/requirements.txt
+    -r {toxinidir}/src/tests/unit/requirements.txt
     pytest
     pytest-cov
 
 [testenv:func]
-commands = pytest {toxinidir}/tests/functional {posargs:-vvvv}
+commands = pytest {toxinidir}/src/tests/functional {posargs:-vvvv}
 deps =
   pytest
   pytest-asyncio<0.23  # avoid breaking changes introduced by v0.23
-  -r {toxinidir}/tests/functional/requirements.txt
+  -r {toxinidir}/src/tests/functional/requirements.txt
