--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -15,37 +15,39 @@ parts:
     build-snaps: [ charm/2.x/stable ]
 
 bases:
-  - build-on:
-    - name: ubuntu
-      channel: "22.04"
-      architectures: ["amd64"]
-    run-on:
-      - name: ubuntu
-        channel: "22.04"
-        architectures:
-          - amd64
-      - name: ubuntu
-        channel: "20.04"
-        architectures:
-          - amd64
-      - name: ubuntu
-        channel: "18.04"
-        architectures:
-          - amd64
-  - build-on:
-    - name: ubuntu
-      channel: "22.04"
-      architectures: ["arm64"]
-    run-on:
-      - name: ubuntu
-        channel: "22.04"
-        architectures:
-          - arm64
-      - name: ubuntu
-        channel: "20.04"
-        architectures:
-          - arm64
-      - name: ubuntu
-        channel: "18.04"
-        architectures:
-          - arm64
+  - name: ubuntu
+    channel: "22.04"
+    architectures: [amd64]
+  - name: ubuntu
+    channel: "22.04"
+    architectures: [arm64]
+  - name: ubuntu
+    channel: "22.04"
+    architectures: [ppc64el]
+  - name: ubuntu
+    channel: "22.04"
+    architectures: [s390x]
+  - name: ubuntu
+    channel: "20.04"
+    architectures: [amd64]
+  - name: ubuntu
+    channel: "20.04"
+    architectures: [arm64]
+  - name: ubuntu
+    channel: "20.04"
+    architectures: [ppc64el]
+  - name: ubuntu
+    channel: "20.04"
+    architectures: [s390x]
+  - name: ubuntu
+    channel: "18.04"
+    architectures: [amd64]
+  - name: ubuntu
+    channel: "18.04"
+    architectures: [arm64]
+  - name: ubuntu
+    channel: "18.04"
+    architectures: [ppc64el]
+  - name: ubuntu
+    channel: "18.04"
+    architectures: [s390x]
