Pin pbr to fix install
pbr release 6.1.1 added setuptools >= 64.0.0 as a build dependency.
However, due to other constraints the maximum version of
setuptools available to install is 59.6.0.

--- a/src/layer.yaml
+++ b/src/layer.yaml
@@ -28,4 +28,4 @@ options:
     apt:
         packages:
             - cpufrequtils
-repo: https://git.launchpad.net/charm-sysconfig
+repo: https://github.com/canonical/charm-sysconfig
