--- a/tox.ini
+++ b/tox.ini
@@ -31,13 +31,13 @@ passenv =
 
 [testenv:lint]
 commands =
-    pflake8
+    flake8
     black --check --diff --color .
     isort --check --diff --color .
 deps =
     black<24.0.0 # TODO: Remove pin once we make our linter pass on it
     flake8
-    pyproject-flake8
+    flake8-pyproject
     flake8-docstrings
     pep8-naming
     flake8-colors
