--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -10,34 +10,8 @@ parts:
   charm:
     source: src
     plugin: reactive
-    # note (rgildein): This is a tmp solution, the progress of which can be monitored
-    # https://bugs.launchpad.net/charm-bcache-tuning/+bug/1993519
-    build-snaps: [ charm/2.x/stable ]
+    build-snaps: [charm]
 
-bases:
-  - build-on:
-    - name: ubuntu
-      channel: "22.04"
-      architectures: ["amd64"]
-    run-on:
-      - name: ubuntu
-        channel: "22.04"
-        architectures:
-          - amd64
-      - name: ubuntu
-        channel: "20.04"
-        architectures:
-          - amd64
-  - build-on:
-    - name: ubuntu
-      channel: "22.04"
-      architectures: ["arm64"]
-    run-on:
-      - name: ubuntu
-        channel: "22.04"
-        architectures:
-          - arm64
-      - name: ubuntu
-        channel: "20.04"
-        architectures:
-          - arm64
+platforms:
+  ubuntu@20.04:amd64:
+  ubuntu@22.04:amd64:
