--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -82,7 +82,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [[self-hosted, jammy, X64, large]]
+        runs-on: [[self-hosted, jammy, X64, large], [Ubuntu_ARM64_4C_16G_01]]
         test-command: ['tox -e func']
         juju-channel: ["3.4/stable"]
     steps:
