--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -82,8 +82,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [[self-hosted, jammy, X64, large]]
-        test-command: ['tox -e func']
+        runs-on: [[self-hosted, jammy, X64, large], [Ubuntu_ARM64_4C_16G_01]]
+        test-command: ['if [ "$(uname -m)" = "aarch64" ]; then echo "skipping func tests on arm64"; else tox -e func; fi']
         juju-channel: ["3.4/stable"]
     steps:
 
@@ -107,7 +107,7 @@ jobs:
         with:
           provider: "lxd"
           juju-channel: ${{ matrix.juju-channel }}
-          charmcraft-channel: "2.x/stable"
+          charmcraft-channel: "3.x/stable"
 
         # This is used by zaza in the functional tests for non-amd64 architectures (if applicable)
       - name: Set zaza juju model constraints for architecture
