- add env vars to generate coverage files

--- a/tox.ini
+++ b/tox.ini
@@ -65,6 +65,9 @@ deps =
     -r {toxinidir}/src/tests/unit/requirements.txt
     pytest
     pytest-cov
+setenv =
+    {[testenv]setenv}
+    COVERAGE_FILE = .coverage-unit
 
 [testenv:func]
 commands = pytest {toxinidir}/src/tests/functional {posargs:-vvvv}
@@ -72,3 +75,6 @@ deps =
   pytest
   pytest-asyncio<0.23  # avoid breaking changes introduced by v0.23
   -r {toxinidir}/src/tests/functional/requirements.txt
+setenv =
+    {[testenv]setenv}
+    COVERAGE_FILE = .coverage-func
