--- a/.github/workflows/promote.yaml
+++ b/.github/workflows/promote.yaml
@@ -36,7 +36,7 @@ jobs:
           echo "destination-channel=latest/candidate" >> $GITHUB_OUTPUT
           echo "origin-channel=latest/edge" >> $GITHUB_OUTPUT
       - name: Promote charm to channel
-        uses: canonical/charming-actions/promote-charm@2.7.0
+        uses: gabrielcocenza/charming-actions/promote-charm@fix-promote
         with:
           credentials: ${{ secrets.CHARMHUB_TOKEN }}
           destination-channel: ${{ steps.set-channels.outputs.destination-channel }}
