--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -131,8 +131,10 @@ jobs:
       fail-fast: false
       matrix:
         runs-on: [[self-hosted, jammy, X64, large], [Ubuntu_ARM64_4C_16G_01], [self-hosted, linux, s390x]]
-        test-command: ['if [ "$(uname -m)" = "aarch64" ] || [ "$(uname -m)" = "s390x" ]; then echo "skipping func tests on arm64 or s390x"; else tox -e func; fi']
+        test-command: ['tox -e func']
         juju-channel: ["3.4/stable"]
+        exclude:
+          - runs-on: [self-hosted, linux, s390x]
     steps:
       - uses: actions/checkout@v4
         with:
