Don't build from source due to dependency loop [1]
[1]: https://github.com/canonical/charmcraft/issues/2259

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -11,6 +11,9 @@ parts:
     source: src
     plugin: reactive
     build-snaps: [charm]
+    reactive-charm-build-arguments:
+      - --binary-wheels
+      - -v
 
 platforms:
   ubuntu@20.04:amd64:
