--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -11,6 +11,7 @@ parts:
     source: src
     plugin: reactive
     build-snaps: [charm]
+    # Workaround for https://github.com/canonical/charmcraft/issues/2259
     reactive-charm-build-arguments:
       - --binary-wheels
       - -v
